wajig (2.4) unstable; urgency=low

  * README, TODO, NEWS: if doc path (/usr/share/doc/<package name>) path for
    a given package isn't found, check if such a package even exists.

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sun, 25 Mar 2012 21:44:50 +0200

wajig (2.3) unstable; urgency=low

  NEW
  * TODO: new command that reads package TODO files

  UI CHANGES
  * Optional arguments should be available only to COMMANDS that use them:
    - [ole] wajig --verbose install <package>
    - [new] wajig install --verbose <package>
  * FILEINSTALL: removed in favor of INSTALL option, -f|--fileinput:
    - [ole] wajig FILEINSTALL <filename>
    - [new] wajig INSTALL --fileinput <filenames and/or packages>
    Note that with this new option, one can specify multiple files and
    packages on the command line.
  * FILEREMOVE: applies to REMOVE as FILEINSTALL applies to INSTALL (see above)
  * FILEDOWNLOAD: applies to DOWNLOAD as... (see above)
  * PURGE: for sake of consistency, give this -f|--fileinput option too
  * REMOVE, PURGE: add --noauth option, to avoid cases where a package would
    be downloaded when there's an unauthenticated version available; this
    happens in a case where removing/purging a package leaves a void
    where APT want to be smart/convenient, and install a replacement.
  * Improve usability by limiting verbosity to either True or False.
  * Rename LISTRECOMMENDED --> RECOMMENDED
  * Remove the sanitation of wajig COMMANS, e.g. where 'LISTcommands',
    'list-commands', and 'li-st_COMMA-nds' would be translated to
    'listcommands'; it's too much magic (and too much work to get it to work
     with argparse)
  * LISTCACHE: remove ability to filter output; user can always run grep
    themselves
  * LISTNAMES: same as LISTCACHE
  * LISTPACKAGES: same as LISTCACHE
  * LISTSTATUS: same as LISTCACHE
  * NEW: 'wajig new --install' replaces the less elegant 'wajig new install'